--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>ТЕСТИРОВАНИЕ ИГРЫЫЫЫ</title>
   </head>
   <body>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/main.js">
+      console.log("Hello World!");
+    </script>
   </body>
 </html>
